add endpoint to demonstrate cached attributes